<resources>
	<string name="app_name">Training</string>
	<string name="button">Button</string>
	<string name="users">users</string>
	<string name="follow">Follow</string>
	<string name="recommended_by">Recommended by:</string>
	<string name="this_is_the_menu">This is the menu</string>
	<string name="seconds">Seconds</string>
	<string name="hours">Hours</string>
	<string name="minutes">Minutes</string>
	<string name="days">Days</string>
	<string name="ago">Ago</string>
	<string name="open_centering">Open centering</string>
	<string name="open_users">Open Users</string>
	<string name="open_z_order">Open z-order</string>
	<string name="open_colorimeter">Open colorimeter</string>
	<string name="hidden">Hidden</string>
	<string name="hide">Hide</string>
	<string name="show">Show</string>
	<string name="open_animation_1">Open animation 1</string>
	<string name="open_animation_2">Open animation 2</string>
	<string name="open_animation_3">Open animation 3</string>
	<string name="add">Add</string>
	<string name="remove">Remove</string>
	<string name="add_alpha">Add alpha</string>
	<string name="remove_alpha">Remove alpha</string>
	<string name="open_scroll">Open scroll</string>
	<string name="colored_view">Colored View</string>
	<string name="animate_with_random_value">Animate with Random Value</string>
	<string name="custom_progress">Custom Progress</string>
	<string name="roles">roles</string>
	<string name="asym">asym</string>
	<string name="loading">loading</string>
	<string name="list_empty">List empty</string>
	<string name="tab">Tab</string>
	<string name="update">Update</string>
	<string name="cancel">Cancel</string>
	<string name="open_bottom">Open bottom</string>
	<string name="open_counter">Open counter</string>
	<string name="update_counter">Update counter</string>
	<string name="multithreading">Multithreading</string>
	<string name="sea">Sea</string>
	<string name="ships_count">ships count</string>
	<string name="gate">gate</string>
	<string name="ship">ship</string>
	<string name="dispatcher">Dispatcher</string>
	<string name="exit_bread">Exit bread</string>
	<string name="exit_banana">Exit banana</string>
	<string name="exit_clothes">Exit clothes</string>
	<string name="pier_bread">Pier bread</string>
	<string name="start_generator">start generator</string>
	<string name="stop">stop</string>
	<string name="start">start</string>
	<string name="piers">Piers</string>
	<string name="truck">Truck</string>
	<string name="max_speed">Max Speed:</string>
	<string name="puncture_risk">Puncture risk:</string>
	<string name="status">Status:</string>
	<string name="average_speed">Average speed:</string>
	<string name="speed">Speed:</string>
	<string name="path">Path:</string>
	<string name="start_race">Start race</string>
	<string name="type">Type</string>
	<string name="add_extra">Add extra</string>
	<string name="extra">Extra</string>
	<string name="apply">Apply</string>
	<string name="race">Race</string>
	<string name="repeat">Repeat</string>
	<string name="result">Result</string>
	<string name="delete">Delete</string>
	<string name="number_id">Number ID:</string>
</resources>