<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:padding="16dp">

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/til_type"
		style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/type"
		app:expandedHintEnabled="false">

		<AutoCompleteTextView
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:inputType="none" />

	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/til_speed"
		android:layout_marginTop="13dp"
		style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/speed"
		app:expandedHintEnabled="false">

		<com.google.android.material.textfield.TextInputEditText
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:inputType="number" />

	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/til_puncture_risk"
		style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
		android:layout_width="match_parent"
		android:layout_marginTop="13dp"
		android:layout_height="wrap_content"
		android:hint="@string/puncture_risk"
		app:expandedHintEnabled="false">

		<com.google.android.material.textfield.TextInputEditText
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:inputType="number" />

	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.checkbox.MaterialCheckBox
		android:id="@+id/mcb_add_extra"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/add_extra" />

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/til_extra"
		style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/extra"
		app:expandedHintEnabled="false">

		<com.google.android.material.textfield.TextInputEditText
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:inputType="number" />

	</com.google.android.material.textfield.TextInputLayout>


</LinearLayout>