<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:tools="http://schemas.android.com/tools"
	android:columnCount="3">

	<LinearLayout
		android:layout_row="0"
		android:layout_rowWeight="0"
		android:layout_column="0"
		android:layout_columnSpan="3"
		android:layout_columnWeight="1"
		android:background="@color/blue"
		android:gravity="center"
		android:orientation="vertical"
		android:padding="3dp">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/sea"
			android:textColor="@color/black" />

		<TextView
			android:id="@+id/tv_count_in_sea"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?attr/textAppearanceBodyLarge"
			android:text="@string/ships_count"
			android:textColor="@color/black" />

	</LinearLayout>

	<LinearLayout
		android:layout_height="50dp"
		android:layout_row="1"
		android:layout_rowWeight="1"
		android:layout_column="1"
		android:layout_columnWeight="1"
		android:background="@color/yellow"
		android:gravity="center"
		android:orientation="vertical"
		android:padding="3dp">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/gate"
			android:textColor="@color/black" />

		<TextView
			android:id="@+id/tv_gate"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="center"
			android:text="@string/ship"
			android:textColor="@color/black" />

	</LinearLayout>

	<LinearLayout
		android:layout_height="50dp"
		android:layout_row="2"
		android:layout_rowWeight="1"
		android:layout_column="1"
		android:layout_columnWeight="1"
		android:background="@color/rad"
		android:gravity="center"
		android:orientation="vertical"
		android:padding="3dp">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/dispatcher"
			android:textColor="@color/black" />

		<TextView
			android:id="@+id/tv_dispatcher"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="center"
			android:text="@string/ship"
			android:textColor="@color/black" />

	</LinearLayout>

	<LinearLayout
		android:layout_height="50dp"
		android:layout_row="3"
		android:layout_rowWeight="1"
		android:layout_column="0"
		android:layout_columnWeight="1"
		android:background="@color/green"
		android:gravity="center"

		android:orientation="vertical"
		android:padding="3dp">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/exit_bread"
			android:textColor="@color/black" />

		<TextView
			android:id="@+id/tv_exit_bread"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="center"
			android:text="@string/ship"
			android:textColor="@color/black" />

	</LinearLayout>

	<LinearLayout
		android:layout_height="50dp"
		android:layout_row="3"
		android:layout_rowWeight="1"
		android:layout_column="1"
		android:layout_columnWeight="1"
		android:background="@color/sea"
		android:gravity="center"
		android:orientation="vertical"
		android:padding="3dp">


		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/exit_banana"
			android:textColor="@color/black" />

		<TextView
			android:id="@+id/tv_exit_banana"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="center"
			android:text="@string/ship"
			android:textColor="@color/black" />

	</LinearLayout>

	<LinearLayout
		android:layout_height="50dp"
		android:layout_row="3"
		android:layout_rowWeight="1"
		android:layout_column="2"
		android:layout_columnWeight="1"
		android:background="@color/purple"
		android:gravity="center"
		android:orientation="vertical"
		android:padding="3dp">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/exit_clothes"
			android:textColor="@color/white" />

		<TextView
			android:id="@+id/tv_exit_clothes"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="center"
			android:text="@string/ship"
			android:textColor="@color/white" />


	</LinearLayout>

	<RelativeLayout
		android:layout_row="4"
		android:layout_rowWeight="0"
		android:layout_height="50dp"
		android:layout_column="0"
		android:layout_columnWeight="1" />

	<RelativeLayout
		android:layout_row="4"
		android:layout_rowWeight="0"
		android:layout_column="1"
		android:layout_columnWeight="1" />

	<RelativeLayout
		android:layout_row="4"
		android:layout_rowWeight="0"
		android:layout_column="2"
		android:layout_columnWeight="1" />

	<LinearLayout
		android:layout_height="50dp"
		android:layout_row="5"
		android:layout_rowWeight="1"
		android:layout_column="0"
		android:layout_columnWeight="1"
		android:background="@color/green"
		android:gravity="center"
		android:orientation="vertical"
		android:padding="3dp">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/pier_bread"
			android:textColor="@color/black" />

		<TextView
			android:id="@+id/tv_pier_bread"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="center"
			tools:text="@string/ship"
			android:textColor="@color/black" />

		<com.google.android.material.progressindicator.LinearProgressIndicator
			android:id="@+id/lpi_pier_bread"
			android:layout_width="100dp"
			android:layout_height="wrap_content" />

	</LinearLayout>

	<LinearLayout
		android:layout_height="50dp"
		android:layout_row="5"
		android:layout_rowWeight="1"
		android:layout_column="1"
		android:layout_columnWeight="1"
		android:background="@color/sea"

		android:gravity="center"
		android:orientation="vertical"
		android:padding="3dp">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/pier_bread"
			android:textColor="@color/black" />

		<TextView
			android:id="@+id/tv_pier_banana"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="center"
			tools:text="@string/ship"
			android:textColor="@color/black" />

		<com.google.android.material.progressindicator.LinearProgressIndicator
			android:id="@+id/lpi_pier_banana"
			android:layout_width="100dp"
			android:layout_height="wrap_content" />


	</LinearLayout>

	<LinearLayout
		android:layout_height="50dp"
		android:layout_row="5"
		android:layout_rowWeight="1"
		android:layout_column="2"
		android:layout_columnWeight="1"
		android:background="@color/purple"
		android:gravity="center"
		android:orientation="vertical"
		android:padding="3dp">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/pier_bread"
			android:textColor="@color/white" />

		<TextView
			android:id="@+id/tv_pier_clothes"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="center"
			tools:text="@string/ship"
			android:textColor="@color/white" />

		<com.google.android.material.progressindicator.LinearProgressIndicator
			android:id="@+id/lpi_pier_clothes"
			android:layout_width="100dp"
			android:layout_height="wrap_content" />


	</LinearLayout>

	<com.google.android.material.button.MaterialButton
		android:id="@+id/btn_start_generator"
		android:layout_rowWeight="0"
		android:layout_column="0"
		android:layout_columnWeight="1"
		android:text="@string/start" />

	<com.google.android.material.button.MaterialButton
		android:id="@+id/btn_stop_generator"
		android:layout_rowWeight="0"
		android:layout_column="2"
		android:layout_columnWeight="1"
		android:text="@string/stop" />


</GridLayout>