<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<ImageView
		android:id="@+id/iv_image"
		android:layout_width="300dp"
		android:layout_height="300dp"
		android:scaleType="centerCrop"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/tv_text"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/hidden"
		android:visibility="gone"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<com.google.android.material.button.MaterialButton
		android:id="@+id/btn_hide"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="13dp"
		android:text="@string/hide"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toStartOf="@id/btn_show"
		app:layout_constraintStart_toStartOf="parent" />

	<com.google.android.material.button.MaterialButton
		android:id="@+id/btn_show"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="13dp"
		android:text="@string/show"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@id/btn_hide" />

</androidx.constraintlayout.widget.ConstraintLayout>